[package]
name = "s9_binance_adapter"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Silvennoinen <alex@silvennoinen.de>"]

[dependencies]
s9_binance_websocket = { git = "https://github.com/AlexSilver9/s9_binance_websocket.git" }
s9_binance_codec = { git = "https://github.com/AlexSilver9/s9_binance_codec.git" }
s9_parquet = { git = "https://github.com/AlexSilver9/s9_parquet.git" }
ctrlc = { version = "3.5", features = ["termination"] }
#rustls = { version = "0.23.22", default-features = false, features = ["std", "aws_lc_rs"] }
tracing-subscriber = "0.3"
tracing = "0.1"
anyhow = "1.0"